fixing look on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,9 +1,5 @@
-/*@import '../../../node_modules/bootstrap';*/
-@import '../../node_modules/normalize.css/normalize.css';
 
-/*
-@import '../variables.css';
-*/
+
 /*
  * Base styles
  * ========================================================================== */
@@ -285,6 +281,16 @@ a.list-group-item {
     border-top: 1px solid #ddd !important;
     padding:0px 15px;
 
+}
+
+.player-title {
+    color: #fff;
+    font-size: 1.5em;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
 
 
